src/styles/Home.css
body {
  background-color: #310;
}

.Landing-Page-Banner-PC {
    background-image: url('../images/mainmenu.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center top;
  }
  
.text-header {
  color: #cb6;
}
.text-subheader {
  color: #feb;
}

.block-darker {
  background-color: #240c00;
}
.block-lighter {
  background-color: #482a1a;
}

#about p {
  margin-top: 20px;
  text-indent: 5vw;
  line-height: 2em;
  color: #edd;
}
#about ul {
  display: block;
  margin-bottom: 70px;
  text-align: center;
}
#about li {
  display: inline-block;
  padding: 20px;
}

#related .doc {
  display: inline-block;
  vertical-align: top;
  width: 280px;
  height: 145px;
  margin: 10px;
  padding: 15px;
  background: #482a1a;
  color: #feb;
}

